<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:elevation="8dp"
            android:layout_gravity="center"
            android:paddingTop="32dp"
            android:paddingBottom="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:textSize="36sp"
                    android:singleLine="false"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_class"
                android:layout_margin="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_brand"
                    android:layout_width="match_parent"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_brand" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pick_exp_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/confirm_use_by_date"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:onClick="showDatePickerDialog" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_weight=".60"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/confirm_type"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:textColor="@color/secondary_text" />

                <Spinner
                    android:id="@+id/input_type"
                    android:layout_weight=".4"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_height="match_parent"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_weight=".6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/confirm_weight"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"
                    android:textColor="@color/secondary_text" />

                <EditText
                    android:id="@+id/weight_number_input"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".1"/>
                <Spinner
                    android:id="@+id/weight_unit_input"
                    android:layout_weight=".3"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="match_parent"/>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/confirm_entry"
        android:src="@drawable/ic_done_white_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_16dp"
        app:fabSize="normal"/>

</FrameLayout>